@@ -2390,7 +2390,6 @@ class PluginsApi {
         webpage: string | null;
         needsLib: string[];
         optionalLib: string[];
-        syncEval: string;
         deprecated: string | null;
         gamemode: string[];
         changelog: string[];
@@ -2424,7 +2423,6 @@ class LibsApi {
         webpage: string | null;
         needsLib: string[];
         optionalLib: string[];
-        syncEval: string;
         deprecated: string | null;
         gamemode: string[];
         changelog: string[];
